# lusanmanso.verification.io

./: .gitignore  README.md  pyproject.toml  sonar-project.properties
practica1/: main_en_depuracion.py  main_final.py  main_inicial.py
practica3/: plan.md  radar_meteorologico.py  test_radar_meteorologico.py
