[project]
name = "lusanmanso-verification-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "coverage>=7.13.4",
    "flask>=3.1.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pinocchio>=0.4.3",
    "pynose>=1.5.5",
    "pysonar>=1.3.0.4086",
    "tk>=0.1.0",
]
